use fa icons gem

--- a/app/views/users/_edit_user_form.html.erb
+++ b/app/views/users/_edit_user_form.html.erb
@@ -27,7 +27,7 @@
     </div> 
     
     <div id="user_current_img" class="editable">
-      <i class="fas fa-pencil-alt edit-pencil"></i>
+      <%= fa_icon "pencil", class: "edit-pencil" %>
       <%= render 'user_thumbnail_img', user: user %>
     </div>
 
