--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,7 +16,7 @@
     <% end %>
     <div>
       <%= link_to edit_user_path(user) do %>
-        <i class="fas fa-edit"></i>
+        <%= fa_icon "edit" %>
       <% end %>
     </div>
   </div>
