--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -7,7 +7,7 @@
     border: solid black 0.1rem;
     border-radius: 1rem;  
     padding: 0.5rem;
-    margin-bottom: 0.5rem;
+    margin: 0.5rem;
     width: 50%;
     justify-content: space-between;
   }
