--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,22 @@
 
 <%= render 'user_basic_details', user: @user %>
 
+<%= link_to 'Create a new blog post', new_blog_post_path(:user => @user) %> |
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %> |
 <%= link_to 'Delete', @user, method: :delete, data: { confirm: 'Are you sure?' } %>
+
+<% @user.blog_posts.each do |post| %>
+  <div class="blog-post-container flex-row">
+
+    <div style="width:100%">
+        <%= link_to blog_post_path(post) do %>
+            <p>Title: <%= post.title %> </p>
+        <% end %>
+    </div>
+
+    <%= link_to edit_blog_post_path(post) do %>
+        <%= fa_icon "edit" %>
+    <% end %>
+    </div>
+<% end %>
